name:                random-read
version:             1.0.0.3
synopsis:            Test-read files at random sample points.
homepage:            https://github.com/treblacy/random-read
license:             BSD3
license-file:        LICENSE
author:              Albert Y. C. Lai
maintainer:          trebla@vex.net
copyright:           Copyright (c) 2013, Albert Y. C. Lai
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable random-read
  main-is:             random-read.hs
  build-depends:       base >= 4.6
                     , containers >= 0.5
                     , options == 1.2.*
                     , tf-random == 0.5.*
  default-language:    Haskell2010
